--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
 body {
     background-color: salmon;
 }
+
+h1 {
+    color: green
+}
+
+h3 {
+    color: chartreuse
+}
+
+.blue-text {
+    color: blue
+}
