increased font size, changed font color, and added background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,9 @@ h3 {
 header {
     background-color: aquamarine;
 }
+
+.worst-cats {
+    font-size: larger;
+    color: aqua;
+    background-color: black;
+}
