--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,15 @@ header {
     padding: 20px;
     width: 50vw;
 }
+
+#box-1 {
+    background-color: bisque;
+    text-align: center;
+    width: 40%;
+}
+
+#box-2 {
+    background-color: blanchedalmond;
+    text-align: center;
+    width: 40%;
+}
