added a box model positioning section for practice

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,12 @@ header {
     width: 40%;
     font-size: x-large;
 }
+
+#box-model-positioning {
+    background-color: black;
+    height: 250px;
+}
+
+#box-A {
+    background-color: aliceblue;
+}
