--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,17 @@
 * {
     font-family: Papyrus, Arial, sans-serif;
-    /* margin: auto; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* include the border in the width as opposed to adding on to it */
+}
+
+html {
+    height: 100%;
 }
 
 body {
     background-color: salmon;
+    min-height: 100%;
 }
 
 h1 {
